--- a/src/pages/HomePage/components/SearchBarAndImage.module.css
+++ b/src/pages/HomePage/components/SearchBarAndImage.module.css
@@ -1,20 +1,133 @@
 
-
+/* set 3 stages for height depending on screen width fot wide screen, tablet, mobile */
 .mainBox {
     background-image: url('../../../assets/Home/Home_page_hero_banner_image.webp')  ;
-    background-size: 100% auto;
+    background-size: contain;
     background-repeat: no-repeat;
+    background-color: black;
     width: 100%;
-    height: 750px;
-    
-
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-
-    
-   
 }
+
+.searchBarBox input, button {
+    height: 50px;
+    
+}
+
+/*------------------- BREAKPOINTS - min-width 1025px ------------------ */
+@media screen and (min-width: 1301px ) {
+    .mainBox {
+        height: 550px;
+        background-size: 90% auto;
+        background-repeat: no-repeat;
+        background-position: 100% 38%;
+    }
+
+    .textBox {
+        font-size: 3vw;
+        margin-bottom: 10%;
+        margin-left: 2%;
+        width: 20%;
+        height: 35%;
+    }
+
+    .searchBarBox {
+        margin-bottom: 10px;
+        width: 40%;
+    }
+
+    .searchBarBox input {
+        width: 88%;
+    }
+
+    .searchBarBox button {
+        width: 12%;
+        background-color: rgb(245 24 14);
+        border-width: 1px;
+        border-color: black;
+        font-weight: bold;
+        color:white;
+        font-size: 0.8vw;
+    }
+
+}
+
+@media screen and (min-width: 577px) and (max-width: 1300px) {
+    .mainBox {
+        min-height: 400px;
+        background-size: 95% auto;
+        background-repeat: no-repeat;
+        background-position: 200% 60%;
+    }
+
+    .textBox {
+        font-size: 3vw;
+        margin-bottom: 15%;
+        margin-left: 2.5%;
+        width: 20%;
+        height: 35%;
+    }
+
+    .searchBarBox {
+        margin-bottom: 10px;
+        width: 60vw;
+    }
+
+    .searchBarBox input {
+        width: 50vw;
+    }
+
+    .searchBarBox button {
+        width: 10vw;
+        background-color: rgb(245 24 14);
+        border-width: 1px;
+        border-color: black;
+        font-weight: bold;
+        color:white;
+        font-size: 1vw;
+    }
+    
+}
+
+@media screen and (max-width: 576px) {
+    .mainBox {
+        min-height: 300px;
+        font-size: 32px;   
+        justify-content: center;    
+        align-items: center;
+        background-size: cover;
+        background-position: center;
+        gap: 20px;
+    }
+
+    .textBox {
+        background-color: black;
+        font-weight: bold;
+        width: 80%;
+    }
+
+    .searchBarBox {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        width: 80%;
+    }
+
+    .searchBarBox input, button {
+        height: 60px; 
+    }
+
+    .searchBarBox button {
+        font-weight: bold; 
+        background-color: rgb(245 24 14);
+        color: white;
+    }
+    
+}
+
+
 
 .textBox {
     color: white;
