RWD complete except for cond. rend. and burger menu in header

--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -9,39 +9,82 @@
     width: 100%;
 }
 
+
+
 .articleCardsContainer {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     gap: 100px;
     padding: 20px;
     margin: 50px;
+    
+    
 }
 
+
+
 .articleCardsContainer img {
-    width: 350px;
+    object-fit: cover;
+    width: 100%;
+    height: 35vh;   
+    vertical-align: bottom;
+    
+    
 }
 
 
 /* Media Queries */
 
 @media screen and (min-width: 1025px ) {
-    /* .mainBox {
-        min-height: 550px;
-        background-size: cover;
-        background-position: 100% 38%;
-    } */
+    .articleCardsContainer {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+        gap: 150px;
+        padding: 20px;
+        margin: 50px;
+    }
+    
+    .articleCardsContainer img {
+        object-fit: cover;
+        width: 100%;
+    }
+
+
 }
 
 @media screen and (min-width: 577px) and (max-width: 1024px) {
-    /* .mainBox {
-        min-height: 400px;
-    } */
+    
+    .articleCardsContainer {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        gap: 100px;
+        padding: 20px;
+        margin: 50px;
+    }
+
+
+    .articleCardsContainer img {
+        object-fit: cover;
+        width: 100%;
+    }
+
+
+
 }
 
 @media screen and (max-width: 576px) {
-    .homepageMain {
-        font-size: 16px;
-        
-        
+    
+    .articleCardsContainer {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        gap: 100px;
+        padding: 20px;
+        margin: 20px;
     }
+    
+    .articleCardsContainer img {
+        object-fit: cover;
+        width: 100%;
+    }
+
 }
